// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form HTML test 1`] = `
<form
  action="#"
  class="jsde-form"
>
  <div
    class="jsde-field"
  >
    <label
      class="jsde-field__label"
    >
      field_1
    </label>
    <input
      class="jsde-field__input"
      value="1"
    />
  </div>
  <div
    class="jsde-field"
  >
    <label
      class="jsde-field__label"
    >
      field_2
    </label>
    <input
      class="jsde-field__input"
      value="one"
    />
  </div>
  <div
    class="jsde-field"
  >
    <label
      class="jsde-field__label"
    >
      field_3
    </label>
    <input
      class="jsde-field__input"
      value="first"
    />
  </div>
  <div
    class="jsde-relationship"
  >
    <label
      class="jsde-relationship__label"
    >
      r 1
    </label>
  </div>
  <div
    class="jsde-relationship"
  >
    <label
      class="jsde-relationship__label"
    >
      r 2
    </label>
  </div>
</form>
`;

exports[`Form field HTML test 1`] = `
<div
  class="jsde-field"
>
  <label
    class="jsde-field__label"
  >
    field_1
  </label>
  <input
    class="jsde-field__input"
    value=""
  />
</div>
`;

exports[`Form field HTML test 2`] = `
<div
  class="jsde-field"
>
  <label
    class="jsde-field__label"
  >
    field_1
  </label>
  <input
    class="jsde-field__input"
    value="t1"
  />
</div>
`;

exports[`Form rel HTML test 1`] = `
<div
  class="jsde-relationship"
>
  <label
    class="jsde-relationship__label"
  >
    rel_1
  </label>
</div>
`;
